feat: 프로젝트 기능 확장 및 전반적인 변경사항 반영